[gd_scene load_steps=5 format=3 uid="uid://bantbokn5kv1b"]

[ext_resource type="Script" uid="uid://clnwwh0j40fw4" path="res://hud.gd" id="1_37p78"]

[sub_resource type="LabelSettings" id="LabelSettings_64ctp"]
font_color = Color(0.42745098, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8sq4i"]
font_color = Color(0.42745098, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_640wx"]
font_color = Color(0.42745098, 1, 1, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelVidas" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.29700002
anchor_bottom = 0.42800003
offset_left = 251.0
offset_right = -35.144012
offset_bottom = -253.92584
text = "Vidas 3"
label_settings = SubResource("LabelSettings_64ctp")

[node name="LabelTiempo" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_right = 54.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Tiempo: 00:00"
label_settings = SubResource("LabelSettings_8sq4i")

[node name="LabelItems" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -83.0
offset_top = -1.0
offset_right = -35.0
offset_bottom = 22.0
grow_horizontal = 0
text = "Items:"
label_settings = SubResource("LabelSettings_640wx")
